--- a/index.html
+++ b/index.html
@@ -1,161 +1,89 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Spaceship Race</title>
-  <style>
-    canvas {
-      display: block;
-      margin: auto;
-      background-color: #f0f0f0;
-    }
-  </style>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Fish Pong</title>
+    <style>
+        canvas {
+            display: block;
+            margin: auto;
+            background-color: #f0f0f0;
+        }
+    </style>
 </head>
 <body>
-  <canvas id="gameCanvas" width="800" height="600"></canvas>
-  <script>
-    const canvas = document.getElementById("gameCanvas");
-    const ctx = canvas.getContext("2d");
+    <canvas id="gameCanvas" width="480" height="320"></canvas>
+    <script>
+        const canvas = document.getElementById("gameCanvas");
+        const ctx = canvas.getContext("2d");
 
-    // Spaceship properties
-    const spaceship = {
-      x: 50,
-      y: canvas.height / 2,
-      size: 20,
-      velocityX: 2,
-      velocityY: 0,
-      thrust: 0.1,
-    };
+        const paddleWidth = 10;
+        const paddleHeight = 60;
+        const fishSize = 15;
 
-    // Track properties
-    const trackWidth = 150;
-    const trackHeight = 200;
-    const trackSegments = [
-      { x: 150, y: 300 },
-      { x: 350, y: 100 },
-      { x: 550, y: 400 },
-      { x: 750, y: 100 },
-    ];
+        const leftPaddle = { x: 30, y: canvas.height / 2 - paddleHeight / 2 };
+        const rightPaddle = { x: canvas.width - 30 - paddleWidth, y: canvas.height / 2 - paddleHeight / 2 };
+        const fish = { x: canvas.width / 2, y: canvas.height / 2, velocityX: 2, velocityY: 2 };
 
-    // Key states
-    const keys = {
-      ArrowUp: false,
-      ArrowDown: false,
-    };
-
-    // Add event listeners for keyboard input
-    window.addEventListener("keydown", (event) => {
-      if (event.key in keys) {
-        event.preventDefault();
-        keys[event.key] = true;
-      }
-    });
-
-    window.addEventListener("keyup", (event) => {
-      if (event.key in keys) {
-        event.preventDefault();
-        keys[event.key] = false;
-      }
-    });
-
-    // Game loop
-    function gameLoop() {
-      updateSpaceship();
-      checkCollision();
-      drawScene();
-      requestAnimationFrame(gameLoop);
-    }
-
-    // Update spaceship position
-    function updateSpaceship() {
-      if (keys.ArrowUp) {
-        spaceship.velocityY -= spaceship.thrust;
-      }
-
-      if (keys.ArrowDown) {
-        spaceship.velocityY += spaceship.thrust;
-      }
-
-      spaceship.y += spaceship.velocityY;
-    }
-
-    // Check for collision with track walls
-    function checkCollision() {
-      const minY = getMinY(spaceship.x);
-      const maxY = getMaxY(spaceship.x);
-
-      if (spaceship.y - spaceship.size / 2 <= minY || spaceship.y + spaceship.size / 2 >= maxY) {
-        resetSpaceship();
-      }
-    }
-
-    // Get the minY value for the current spaceship x position
-    function getMinY(x) {
-      for (let i = 1; i < trackSegments.length; i++) {
-        if (x >= trackSegments[i - 1].x && x <= trackSegments[i].x) {
-          return trackSegments[i - 1].y - trackHeight / 2;
+        function drawPaddle(x, y) {
+            ctx.beginPath();
+            ctx.rect(x, y, paddleWidth, paddleHeight);
+            ctx.fillStyle = "#000000";
+            ctx.fill();
+            ctx.closePath();
         }
-      }
-      return 0;
-    }
 
-    // Get the maxY value for the current spaceship x position
-    function getMaxY(x) {
-      for (let i = 1; i < trackSegments.length; i++) {
-        if (x >= trackSegments[i - 1].x && x <= trackSegments[i].x) {
-          return trackSegments[i - 1].y + trackHeight / 2;
+        function drawFish(x, y) {
+            ctx.beginPath();
+            ctx.arc(x, y, fishSize, 0, Math.PI * 2);
+            ctx.fillStyle = "#FFA500";
+            ctx.fill();
+            ctx.closePath();
         }
-      }
-      return canvas.height;
-    }
 
-        // Reset spaceship position
-        function resetSpaceship() {
-      spaceship.x = 50;
-      spaceship.y = canvas.height / 2;
-      spaceship.velocityY = 0;
-    }
+        function gameLoop() {
+            // Update fish position
+            fish.x += fish.velocityX;
+            fish.y += fish.velocityY;
 
-    // Draw scene
-    function drawScene() {
-      // Clear canvas
-      ctx.clearRect(0, 0, canvas.width, canvas.height);
+            // Collision with paddles
+            if ((fish.x - fishSize <= leftPaddle.x + paddleWidth && fish.y >= leftPaddle.y && fish.y <= leftPaddle.y + paddleHeight) ||
+                (fish.x + fishSize >= rightPaddle.x && fish.y >= rightPaddle.y && fish.y <= rightPaddle.y + paddleHeight)) {
+                fish.velocityX = -fish.velocityX;
+            }
 
-      // Draw track
-      ctx.beginPath();
-      ctx.moveTo(trackSegments[0].x, trackSegments[0].y - trackHeight / 2);
-      for (const segment of trackSegments) {
-        ctx.lineTo(segment.x, segment.y - trackHeight / 2);
-      }
-      ctx.lineTo(trackSegments[trackSegments.length - 1].x, canvas.height);
-      ctx.lineTo(trackSegments[0].x, canvas.height);
-      ctx.closePath();
-      ctx.fillStyle = "#A9A9A9";
-      ctx.fill();
+            // Collision with top and bottom walls
+            if (fish.y - fishSize <= 0 || fish.y + fishSize >= canvas.height) {
+                fish.velocityY = -fish.velocityY;
+            }
 
-      ctx.beginPath();
-      ctx.moveTo(trackSegments[0].x, trackSegments[0].y + trackHeight / 2);
-      for (const segment of trackSegments) {
-        ctx.lineTo(segment.x, segment.y + trackHeight / 2);
-      }
-      ctx.lineTo(trackSegments[trackSegments.length - 1].x, 0);
-      ctx.lineTo(trackSegments[0].x, 0);
-      ctx.closePath();
-      ctx.fillStyle = "#A9A9A9";
-      ctx.fill();
+            // Update paddles
+            if (leftPaddle.y + paddleHeight / 2 > fish.y) {
+                leftPaddle.y -= 2;
+            } else {
+                leftPaddle.y += 2;
+            }
+            if (rightPaddle.y + paddleHeight / 2 > fish.y) {
+                rightPaddle.y -= 2;
+            } else {
+                rightPaddle.y += 2;
+            }
 
-      // Draw spaceship
-      ctx.beginPath();
-      ctx.arc(spaceship.x, spaceship.y, spaceship.size / 2, 0, Math.PI * 2);
-      ctx.fillStyle = "#FF0000";
-      ctx.fill();
-      ctx.strokeStyle = "#000000";
-      ctx.stroke();
-    }
+            // Clear canvas
+            ctx.clearRect(0, 0, canvas.width, canvas.height);
 
-    // Start the game loop
-    gameLoop();
-  </script>
+            // Draw paddles
+            drawPaddle(leftPaddle.x, leftPaddle.y);
+            drawPaddle(rightPaddle.x, rightPaddle.y);
+
+            // Draw fish
+            drawFish(fish.x, fish.y);
+
+            requestAnimationFrame(gameLoop);
+        }
+
+        gameLoop();
+    </script>
 </body>
 </html>
